--- a/html/index.html
+++ b/html/index.html
@@ -11,6 +11,13 @@
         <header class="mainMenu">
             <div>
                <a href="index.html"> <img class="logo" src ="../resources/img/logo.png"></a> 
+
+               <ul class = "icons">
+                <li class = "icon1"><a href = "https://www.instagram.com/katie.ufal/" ><img src="../resources/img/social-media/icons8-facebook-64.png" alt=""></a></li>
+                <li class = "icon1"><a href = "https://sites.google.com/a/ic.ufal.br/comp215/"><img src="../resources/img/social-media/icons8-instagram-64.png" alt=""></a></li>
+                <li class = "icon1"><a href = "https://sites.google.com/a/ic.ufal.br/comp215/"><img  src="../resources/img/social-media/icons8-twitter-64.png" alt=""></a></li>
+               </ul>
+
             </div>  
 
         </header>
@@ -27,6 +34,7 @@
             </nav>
         </div>
 
+        <h1 class="Welcome-text"></h1>
         <div class="moldura">
                  <img  class="mySlides"  src="../resources/img/logo.png">
                  <img  class="mySlides"  src="../resources/img/teste.jpeg">
@@ -35,6 +43,6 @@
           </div>
     </body>
     <script>carousel();</script>
-
+    <script src="../js/index.js"></script>
 </html>
 
